--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "es6-promise": "^4.0.5",
     "graphiql": "^0.7.8",
     "graphql": "^0.7.2",
+    "lodash": "^4.16.6",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-overlays": "^0.6.10",
     "whatwg-fetch": "^1.0.0"
   },
   "scripts": {
